--- a/index.html
+++ b/index.html
@@ -16,5 +16,13 @@
       <div id="cloud"></div>
     </div>
     <script src="main.js"></script>
+    <script>
+      window.va =
+        window.va ||
+        function () {
+          (window.vaq = window.vaq || []).push(arguments);
+        };
+    </script>
+    <script defer src="/_vercel/insights/script.js"></script>
   </body>
 </html>
