add github repo link

--- a/index.html
+++ b/index.html
@@ -9,13 +9,27 @@
       href="https://cdn.jsdelivr.net/gh/devicons/devicon/icons/css3/css3-original.svg"
       type="image/x-icon"
     />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/gh/devicons/devicon@v2.15.1/devicon.min.css"
+    />
+
     <title>CSS Rain Animation</title>
   </head>
   <body>
-    <div class="container">
-      <div id="cloud"></div>
+    <div>
+      <div class="gh-link">
+        <a
+          href="https://github.com/tjthiagocosta/css-rain-animation"
+          target="_blank"
+          ><i class="devicon-github-original-wordmark"></i>
+        </a>
+      </div>
+      <div class="container">
+        <div id="cloud"></div>
+      </div>
+      <script src="main.js"></script>
     </div>
-    <script src="main.js"></script>
     <script>
       window.va =
         window.va ||
